add styles for form and footer (desktop)

--- a/index.html
+++ b/index.html
@@ -232,15 +232,25 @@
       </div>
     </section>
     <section class="form page__form">
-      <h3 class="form__title">subscribe and don't miss new articles</h3>
+      <h3 class="form__title title">subscribe and don't miss new articles</h3>
       <p class="form__text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor
         sit amet, consectetur adipiscing elit, sed do eiusmod.
       </p>
       <form>
-        <input type="text" name="name" placeholder="Name" />
-        <input type="text" name="email" placeholder="Email" />
+        <input
+          class="form__input form__input_name"
+          type="text"
+          name="name"
+          placeholder="Name"
+        />
+        <input
+          class="form__input form__input_email"
+          type="text"
+          name="email"
+          placeholder="Email"
+        />
         <button class="form__button button" type="submit">send</button>
       </form>
     </section>
@@ -252,36 +262,34 @@
           alt="author image"
         />
       </div>
-      <a class="footer__logo logo" href="#">Natalie Laursen</a>
-      <div class="social-networks">
-        <ul>
-          <li class="social-networks__item social-networks__item_white">
-            <a href="https://www.facebook.com/"
-              ><img src="/src/icons/facebook.svg" alt="facebook icon"
-            /></a>
-          </li>
-          <li class="social-networks__item social-networks__item_active">
-            <a href="https://www.instagram.com/"
-              ><img src="/src/icons/instagram.svg" alt="instagram icon"
-            /></a>
-          </li>
-          <li class="social-networks__item social-networks__item_white">
-            <a href="https://www.youtube.com/"
-              ><img src="/src/icons/youtube.svg" alt="youtube icon"
-            /></a>
-          </li>
-          <li class="social-networks__item social-networks__item_white">
-            <a href="https://twitter.com/"
-              ><img src="/src/icons/twitter.svg" alt="twitter icon"
-            /></a>
-          </li>
-          <li class="social-networks__item social-networks__item_white">
-            <a href="https://www.pinterest.com/"
-              ><img src="/src/icons/pinterest.svg" alt="pinterest icon"
-            /></a>
-          </li>
-        </ul>
-      </div>
+      <a class="footer__logo logo logo_white" href="#">Natalie Laursen</a>
+      <ul class="social-networks footer__social-network">
+        <li class="social-networks__item social-networks__item_white">
+          <a href="https://www.facebook.com/"
+            ><img src="/src/icons/facebook.svg" alt="facebook icon"
+          /></a>
+        </li>
+        <li class="social-networks__item social-networks__item_active">
+          <a href="https://www.instagram.com/"
+            ><img src="/src/icons/instagram.svg" alt="instagram icon"
+          /></a>
+        </li>
+        <li class="social-networks__item social-networks__item_white">
+          <a href="https://www.youtube.com/"
+            ><img src="/src/icons/youtube.svg" alt="youtube icon"
+          /></a>
+        </li>
+        <li class="social-networks__item social-networks__item_white">
+          <a href="https://twitter.com/"
+            ><img src="/src/icons/twitter.svg" alt="twitter icon"
+          /></a>
+        </li>
+        <li class="social-networks__item social-networks__item_white">
+          <a href="https://www.pinterest.com/"
+            ><img src="/src/icons/pinterest.svg" alt="pinterest icon"
+          /></a>
+        </li>
+      </ul>
       <div class="footer__copyright">
         <small>A. Polina 2020. All rights reserved.</small>
       </div>
