Add styles for responsiveness (tablets)

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor
         sit amet, consectetur adipiscing elit, sed do eiusmod.
       </p>
-      <form>
+      <form class="form__inputs">
         <input
           class="form__input form__input_name"
           type="text"
