--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Natalie Laursen Blog</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body class="page">
@@ -24,13 +24,13 @@
               >
             </li>
             <li class="nav__mobile-item">
-              <a class="nav__link nav__link_mobile" href="#">About</a>
+              <a class="nav__link nav__link_mobile" href="#about">About</a>
             </li>
             <li class="nav__mobile-item">
               <a class="nav__link nav__link_mobile" href="#">Marathone</a>
             </li>
             <li class="nav__mobile-item">
-              <a class="nav__link nav__link_mobile" href="#">Contact</a>
+              <a class="nav__link nav__link_mobile" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -38,9 +38,13 @@
           <li class="nav__item">
             <a class="nav__link nav__link_active" href="#">Home</a>
           </li>
-          <li class="nav__item"><a class="nav__link" href="#">About</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About</a>
+          </li>
           <li class="nav__item"><a class="nav__link" href="#">Marathone</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contact">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -275,7 +279,7 @@
           </div>
           <a class="tags__cut" href="#">See more</a>
         </div>
-        <article class="author">
+        <article id="about" class="author">
           <h4 class="author__title title">About author</h4>
           <img
             class="author__image"
@@ -345,7 +349,7 @@
         />
       </div>
       <a class="footer__logo logo logo_white" href="#">Natalie Laursen</a>
-      <ul class="social-networks footer__social-network">
+      <ul id="contact" class="social-networks footer__social-network">
         <li class="social-networks__item">
           <a href="https://www.facebook.com/"
             ><svg
